--- a/Client/Shared/FarmerBotStatusPage.razor
+++ b/Client/Shared/FarmerBotStatusPage.razor
@@ -1,30 +1,31 @@
 ﻿@page "/farmerbotstatus"
 @inject IDockerService DockerService
 
-<RadzenStack Orientation="Orientation.Horizontal" Class="rz-p-8" Gap="1rem">
-    @if (DockerService.ActualFarmerBotStatus != null)
-    {
-        <RadzenStack Orientation="Orientation.Vertical" Wrap="FlexWrap.Wrap" JustifyContent="JustifyContent.Center" Gap="2rem">
-            <RadzenText>Updated at</RadzenText>
-            @foreach (var farmerBot in DockerService.ActualFarmerBotStatus.Containers)
-            {
-                <RadzenText Style="font-weight:500; color: rgb(63, 203, 190)">@(farmerBot.Name) </RadzenText>
-            }
-        </RadzenStack>
-        <RadzenStack Orientation="Orientation.Vertical" Wrap="FlexWrap.Wrap" JustifyContent="JustifyContent.Center" Gap="2rem">
-            <RadzenText>@DockerService.ActualFarmerBotStatus.LastUpdate.ToLocalTime().ToString("yyyy-MM-dd HH:mm:ss")</RadzenText>
-            @foreach (var farmerBot in DockerService.ActualFarmerBotStatus.Containers)
-            {
-                <RadzenBadge Shade="Shade.Darker" BadgeStyle="@GetBadgeStyle(farmerBot.Running)" Text="@(farmerBot.Name)" />
-            }
-        </RadzenStack>
-    }
-    else
-    {
-        <RadzenProgressBar ProgressBarStyle="ProgressBarStyle.Light" Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" />
-    }
-</RadzenStack>
-
+<RadzenCard Style="width: 310px; height: 200px; background-color: rgb(70, 68, 77); justify-content: center; align-items: center; " class="rz-border-radius-0">
+    <RadzenStack Orientation="Orientation.Horizontal" Class="rz-p-2" Gap="1rem">
+        @if (DockerService.ActualFarmerBotStatus != null)
+        {
+            <RadzenStack Orientation="Orientation.Vertical" Wrap="FlexWrap.Wrap" JustifyContent="JustifyContent.Center" Gap="5px">
+                <RadzenText>Updated at</RadzenText>
+                @foreach (var farmerBot in DockerService.ActualFarmerBotStatus.Containers)
+                {
+                    <RadzenText Style="width: 90px; font-weight:500; color: rgb(63, 203, 190)">@(farmerBot.Name) </RadzenText>
+                }
+            </RadzenStack>
+            <RadzenStack Orientation="Orientation.Vertical" Wrap="FlexWrap.Wrap" JustifyContent="JustifyContent.Center" Gap="5px">
+                <RadzenText Style="width: 140px;">@DockerService.ActualFarmerBotStatus.LastUpdate.ToLocalTime().ToString("yyyy-MM-dd HH:mm:ss")</RadzenText>
+                @foreach (var farmerBot in DockerService.ActualFarmerBotStatus.Containers)
+                {
+                    <RadzenBadge Shade="Shade.Darker" BadgeStyle="@GetBadgeStyle(farmerBot.Running)" Text="@(farmerBot.Name)" />
+                }
+            </RadzenStack>
+        }
+        else
+        {
+            <RadzenProgressBar ProgressBarStyle="ProgressBarStyle.Light" Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" />
+        }
+    </RadzenStack>
+</RadzenCard>
 @code {
  
     private string GetSeverityClass(EventMessage message)
