--- a/Client/Shared/NodesStatus.razor
+++ b/Client/Shared/NodesStatus.razor
@@ -1,4 +1,4 @@
-﻿@page "/farmerbotstatus"
+﻿@page "/nodestatus"
 @inject IDockerService DockerService
 
 <RadzenCard Style="width: 310px; height: 200px; background-color: rgb(70, 68, 77); justify-content: center; align-items: center; " class="rz-border-radius-0">
